# giv

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: draw.rs  giv.rs  main.rs  model.rs
