[package]
name = "git-viewer"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Pure Rust gitk clone for the terminal"
repository = "https://github.com/est31/giv"
homepage = "https://github.com/est31/giv"
readme = "README.md"
rust-version = "1.88"

[[bin]]
name = "giv"
path = "src/giv.rs"

[dependencies]
anyhow = "1.0"
gix = "0.76"
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
crossterm = "0.29"
clap = "4.1"
color-eyre = "0.6"